# rgpt

./: CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  flake.nix
.github/: README.md
src/: argparsing.rs  common.rs  highlight.rs  io.rs  lib.rs  main.rs  net.rs  util.rs
