[package]
name = "rgpt"
version = "0.1.0"
edition = "2021"
authors = ["NewDawn0 (Tom)"]
license = "MIT"
keywords = ["cli chatgpt client", "gpt", "gpt3", "chatgpt"]
categories = ["command-line-utilities"]

[dependencies]
const_format = "0.2.30"
crossterm = "0.26.0"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
spinners = "4.1.0"
syntect = "4.6.0"
